--- a/src/styles/pages/_signup.scss
+++ b/src/styles/pages/_signup.scss
@@ -1,7 +1,8 @@
 .signup__container {
-  width: 100%;
-  display: flex;
   flex-direction: row;
+  width: 100%;
+  height: 100%;
+  display: flex;
   border-radius: 1em;
   overflow: hidden;
 }
@@ -9,10 +10,10 @@
   padding: 1em;
 }
 .signup__right {
-  // background-color: $blackPrimary;
   width: 60%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   overflow: auto;
 }
@@ -22,23 +23,7 @@
   margin-bottom: 0.3em;
   margin-top: 0.3em;
 }
-.signup__right div > .signup__providers {
-  margin-bottom: 0.3em;
-  font-size: 100%;
-  min-width: 34px;
-  width: 0;
-  padding: 0.2em;
-  display: flex;
-  border-radius: 100%;
-  // color: darken($color: $whitePrimary, $amount: 10);
-  // border-color: $whitePrimary;
-  // &:hover {
-  //   border-color: $whitePrimary;
-  // }
-}
 .signup__left {
-  // background-color: $whitePrimary;
-  // color: $blackPrimary;
   width: 40%;
   display: flex;
   flex-direction: column;
@@ -61,11 +46,6 @@
   border-radius: 2em;
   width: 100%;
   padding: 0.7em 1em;
-  // color: $blackPrimary;
-  // border-color: $blackPrimary;
-  // &:hover {
-  //   border-color: $blackPrimary;
-  // }
 }
 .signup__animation-toRight {
   animation: slideToRight 0.7s ease-out;
