--- a/src/styles/pages/_login.scss
+++ b/src/styles/pages/_login.scss
@@ -1,13 +1,13 @@
 .login__container {
+  flex-direction: row-reverse;
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: row-reverse;
   border-radius: 1em;
   overflow: hidden;
 }
 .login__container > div {
-  padding: 1em;
+  padding: 5em;
 }
 .login__left {
   width: 60%;
@@ -21,16 +21,7 @@
   text-align: center;
   font-weight: bold;
   margin-bottom: 0.3em;
-}
-.login__left > div .login__providers {
-  margin-bottom: 0.3em;
-  font-size: 100%;
-  min-width: 34px;
-  width: 0;
-  padding: 0.2em;
-  display: flex;
-  border-radius: 100%;
-  margin-left: 1em;
+  margin-top: 0.3em;
 }
 .login__right {
   width: 40%;
