--- a/src/styles/pages/_login.scss
+++ b/src/styles/pages/_login.scss
@@ -7,7 +7,8 @@
   overflow: hidden;
 }
 .login__container > div {
-  padding: 5em;
+  padding: 1em;
+  box-sizing: border-box;
 }
 .login__left {
   width: 60%;
