--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -7,9 +7,9 @@
 #root {
   height: 100vh;
   width: 100vw;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  //display: flex;
+  //flex-direction: column;
+  //justify-content: space-between;
 }
 
 // Animations
