--- a/src/styles/pages/_landing.scss
+++ b/src/styles/pages/_landing.scss
@@ -1,130 +1,79 @@
 .welcome {
   flex-direction: row;
   display: flex;
-  height: 70vh;
-  border-radius: 2em;
+  height: 100vh;
   overflow: hidden;
   position: relative;
   justify-content: center;
   align-items: center;
 
   .Title {
-  width: 50%;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding-left: 8%;
-
-    h1{
-      font-size: 4.5rem;
-      font-weight: bold;
-      margin: 0;
-
-    }
-    p{
-      font-size: 1.5rem;
-      color: #F32929;
-    }
-
-    button{
-      height: 50px;
-      color: #FFFFFF;
-      padding: 5px 80px;
-      font-size: 1.5rem;
-      font-weight: bold;
-      cursor: pointer;
-      transition: all 0.3s ease;
-      position: relative;
-      display: inline-block;
-      outline: none;
-      border-radius: 10px;
-      border: none;
-      background: #144E84;
-      justify-content: center;
-      align-items: center;
-    }
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 
   .Carr {
-  width: 50%;
-  justify-content: center;
-  align-items: center;
+    justify-content: center;
+    align-items: center;
 
-    .circle{
+    .circle {
       position: absolute;
-      z-index: 0;
+      z-index: 1;
       right: 0;
       top: 0;
-      width: 40%;
-      }
-    .car{
+      bottom: 0;
+      margin: auto;
+    }
+    .car {
       position: relative;
       width: 80%;
       z-index: 10;
-      }
+    }
   }
-
 }
 .welcome > div {
   padding: 5em;
+  box-sizing: border-box;
 }
 
-.services{
+.services {
   display: flex;
   flex-direction: column;
-  background: #144E84;
+  background: #144e84;
 
-  .Patterns{
-    z-index: 10;
-    right: 0;
-    top: 0;
-  }
-
-  .titles{
-    color: #FFFFFF;
+  .titles {
+    color: #ffffff;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100vw;
-    h2{
-      font-size: 3rem;
-      font-weight: bold;
-      margin-top: 4;
-      margin-bottom: 0;
-    }
-    p{
-      font-size: 1.2rem;
-      margin-top: 0;
-      margin-bottom: 5;
-    }
   }
-  .clients{
-    color: #FFFFFF;
+
+  .clients {
+    color: #ffffff;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 15px;
-    width: 100vw;
     margin-top: 0;
     margin-bottom: 4;
 
-    .percent{
+    .percent {
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
       margin-top: 0;
-      margin-bottom: 15;  
+      margin-bottom: 15;
 
-      h3{
+      h3 {
         font-size: 3rem;
         font-weight: bold;
         margin: 0;
         padding: 0;
       }
 
-      p{
+      p {
         font-size: 1.2rem;
         margin-top: 0;
       }
@@ -132,43 +81,40 @@
   }
 }
 
-.characteristic{
+.characteristic {
   display: flex;
   flex-direction: column;
-  padding: 0 10%;
-  .title{
+  .title {
     text-align: center;
 
-    h2{
+    h2 {
       font-size: 3rem;
       font-weight: bold;
       margin-top: 3;
-      margin-bottom: 0; 
+      margin-bottom: 0;
     }
-    p{
+    p {
       font-size: 1.5rem;
       margin-top: 0;
     }
-
   }
-  .items{
+  .items {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
     grid-auto-rows: minmax(100px, auto);
     padding: 30px;
     align-items: flex-start;
-    .item{
+    .item {
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
       text-align: center;
-      h4{
+      h4 {
         font-size: 1.2rem;
         margin: 0;
       }
     }
   }
-
 }
