--- a/src/styles/pages/_landing.scss
+++ b/src/styles/pages/_landing.scss
@@ -3,7 +3,6 @@
   display: flex;
   height: 100vh;
   overflow: hidden;
-  position: relative;
   justify-content: center;
   align-items: center;
 
@@ -13,28 +12,20 @@
     align-items: center;
   }
 
-  .Carr {
-    justify-content: center;
-    align-items: center;
+  .circle {
+    width: 125%;
+  }
 
-    .circle {
-      position: absolute;
-      z-index: 1;
-      right: 0;
-      top: 0;
-      bottom: 0;
-      margin: auto;
-    }
-    .car {
-      position: relative;
-      width: 90%;
-      z-index: 10;
-    }
+  .car {
+    position: relative;
+    width: 40%;
+    z-index: 10;
   }
 }
 .welcome > div {
   padding: 5em;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .services {
