--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -2,12 +2,20 @@
 
 * {
   font-family: "Montserrat", sans-serif !important;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  width: 100%;
+  height: 100vh;
 }
 
 #root {
   position: relative;
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 
 // Animations
