--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,7 @@
 @import "base/settings";
 
 // Pages
+@import "pages/auth";
 @import "pages/login";
 @import "pages/signup";
 @import "pages/landing";
