--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,8 +1,10 @@
 @import "base/base";
-@import "base/settings";
 
 // Pages
 @import "pages/auth";
 @import "pages/login";
 @import "pages/signup";
 @import "pages/landing";
+
+// Components
+@import "components/table";
