--- a/src/styles/pages/_auth.scss
+++ b/src/styles/pages/_auth.scss
@@ -8,7 +8,7 @@
 
 .signup__container,
 .login__container {
-  width: 1200px;
+  width: 1300px;
   max-width: 100%;
   height: 100%;
   display: flex;
@@ -52,14 +52,14 @@
   }
   p {
     text-align: center;
-    margin-bottom: 0.4em;
   }
   a {
     width: 40%;
+    margin-top: 0.7em;
     button {
       border-radius: 2em;
       width: 100%;
-      padding: 0.7em 1em;
+      padding: 0.6em 0.4em;
     }
   }
 }
