--- a/src/styles/components/_maps.scss
+++ b/src/styles/components/_maps.scss
@@ -3,6 +3,11 @@
   height: 770px;
 }
 
+.parkud__map_small {
+  width: 100%;
+  height: 420px;
+}
+
 .animate__animated.animate__slideInRight {
   --animate-duration: 0.6s;
 }
